--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^3.0.2"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "prettier": "^3.0.2",
+    "react-icons": "^4.10.1"
   }
 }
