--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "creative_jungle_test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://shamirduran.github.io/creative_jungle_test",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -22,7 +23,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "npx prettier --write ."
+    "format": "npx prettier --write .",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.0.0",
     "prettier": "^3.0.2",
     "react-icons": "^4.10.1"
   }
