--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.0.0",
     "prettier": "^3.0.2",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "react-infinite-scroll-component": "^6.1.0"
   }
 }
